modal open and mobile menu open z-index correction

--- a/source/less/blocks/project.less
+++ b/source/less/blocks/project.less
@@ -32,6 +32,8 @@
   object-fit: cover;
   flex-grow: 1;
 
+  cursor: pointer;
+
   &--big {
     width: 500px;
     height: 400;
@@ -85,4 +87,26 @@
   text-transform: capitalize;
   font-size: 18px;
   font-weight: normal;
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 4;
+
+  width: 80%;
+
+  display: none;
+
+  &--open {
+    display: block;
+  }
+}
+
+.modal__picture {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
